created POST /users/<user_id>/projects, updated POST /users
