# routes/index.js
@@ -104,10 +104,6 @@ module.exports = (app, configs, db) => {
             if (!req.body.email) {
                 throw new ErrorHandler(400, "Email cannot be empty");
             };
-
-            if (!req.body.scope) {
-                throw new ErrorHandler(400, "scope cannot be empty");
-            };
             // =============================================================
 
             // SEARCH FOR USER IN DB
@@ -124,20 +120,19 @@ module.exports = (app, configs, db) => {
                 throw new ErrorHandler(409, "Duplicate Users");
             };
 
-            if (Array.isArray(req.body.scope) == false) {
-                throw new ErrorHandler(401, "SCOPE MOST BE ARRAY OF STRINGS");
-            }
+            // if (Array.isArray(req.body.scope) == false) {
+            //     throw new ErrorHandler(401, "SCOPE MOST BE ARRAY OF STRINGS");
+            // }
 
             let newUser = await User.create({
                 auth_id: security.hash(uuidv4()),
                 auth_key: security.hash(uuidv1()),
-                email: req.body.email,
-                scope: req.body.scope.toString()
+                email: req.body.email
+                // scope: req.body.scope.toString()
             }).catch(error => {
                 throw new ErrorHandler(500, error);
             });
 
-            // RETURN STORED TOKEN AND PROVIDER
             return res.status(200).json(newUser)
         } catch (error) {
             next(error)
@@ -171,6 +166,95 @@ module.exports = (app, configs, db) => {
             });
 
             // RETURN STORED TOKEN AND PROVIDER
+            return res.status(200).json(newProject)
+        } catch (error) {
+            next(error)
+        }
+    });
+
+    app.post("/users/:user_id/projects", async (req, res, next) => {
+        try {
+            // ==================== REQUEST BODY CHECKS ====================
+            if (!req.body.auth_key) {
+                throw new ErrorHandler(400, "Auth_key cannot be empty");
+            };
+
+            if (!req.body.auth_id) {
+                throw new ErrorHandler(400, "Auth_id cannot be empty");
+            };
+
+            if (!req.params.user_id) {
+                throw new ErrorHandler(400, "User_id cannot be empty");
+            };
+
+            if (!req.body.project_id) {
+                throw new ErrorHandler(400, "Project_id cannot be empty");
+            };
+            // =============================================================
+
+            // SEARCH FOR USER IN DB
+            let user = await User.findAll({
+                where: {
+                    [Op.and]: [{
+                        auth_key: req.body.auth_key
+                    }, {
+                        auth_id: req.body.auth_id
+                    }, {
+                        id: req.params.user_id
+                    }]
+                }
+            }).catch(error => {
+                throw new ErrorHandler(500, error);
+            });
+
+            // RETURN = [], IF USER NOT FOUND
+            if (user.length < 1) {
+                throw new ErrorHandler(401, "User doesn't exist");
+            }
+
+            // IF RETURN HAS MORE THAN ONE ITEM
+            if (user.length > 1) {
+                throw new ErrorHandler(409, "Duplicate Users");
+            }
+
+            let usersProject = await Project.findAll({
+                where: {
+                    id: req.body.project_id
+                }
+            }).catch(error => {
+                throw new ErrorHandler(500, error);
+            });
+
+            if (usersProject.length < 1) {
+                throw new ErrorHandler(401, "Project doesn't exist");
+            }
+
+            // IF RETURN HAS MORE THAN ONE ITEM
+            if (usersProject.length > 1) {
+                throw new ErrorHandler(409, "Duplicate Projects");
+            }
+
+            let project = await usersProjects.findAll({
+                where: {
+                    userId: user[0].id,
+                    projectId: usersProject[0].id
+                }
+            }).catch(error => {
+                throw new ErrorHandler(500, error);
+            });
+
+            // IF RETURN HAS MORE THAN ONE ITEM
+            if (project.length > 0) {
+                throw new ErrorHandler(409, "User already has this Project added");
+            }
+
+            let newProject = await usersProjects.create({
+                userId: user[0].id,
+                projectId: usersProject[0].id
+            }).catch(error => {
+                throw new ErrorHandler(500, error);
+            });
+
             return res.status(200).json(newProject)
         } catch (error) {
             next(error)
